Use new favicon

--- a/addons/fitlytics/finnito/fitlytics-theme/resources/views/layouts/default.twig
+++ b/addons/fitlytics/finnito/fitlytics-theme/resources/views/layouts/default.twig
@@ -50,7 +50,7 @@
         </title>
 
     <!-- Favicon -->
-    {{ favicons("theme::img/favicon.jpg") }}
+    {{ favicons("theme::img/favicon.png") }}
 
     {# Important!! #}
     {{ constants() }}
