--- a/addons/fitlytics/finnito/fitlytics-module/resources/views/pages/home.twig
+++ b/addons/fitlytics/finnito/fitlytics-module/resources/views/pages/home.twig
@@ -123,7 +123,7 @@
 
     <table class="outer-table">
     {% for num, day in period %}
-        <thead>
+        <thead id="{{ day|date("Y-m-d") }}">
             <th colspan="3">{{ day|date("D jS F") }}</th>
         </thead>
         <tbody>
