Fix: Rework the URL scheme for navigating weeks

--- a/addons/fitlytics/finnito/fitlytics-module/resources/views/pages/home.twig
+++ b/addons/fitlytics/finnito/fitlytics-module/resources/views/pages/home.twig
@@ -14,9 +14,9 @@
                 {% endfor %}
                 </select>
             </div>
-            <a class="button light-blue" href="/?week-of={{ week_of|date_modify('monday this week')|date_modify('-1 week')|date('Y-m-d', 'Pacific/Auckland') }}">Week ⬅️</a>
-            <a class="button light-yellow" href="/?week-of={{ 'now'|date('Y-m-d', 'Pacific/Auckland') }}">Today</a>
-            <a class="button light-blue" href="/?week-of={{ week_of|date_modify('monday this week')|date_modify('+1 week')|date('Y-m-d', 'Pacific/Auckland') }}">➡️ Week</a>
+            <a class="button light-blue" href="/{{ week_of|date_modify('monday this week')|date_modify('-1 week')|date('Y-m-d', 'Pacific/Auckland') }}">Week ⬅️</a>
+            <a class="button light-yellow" href="/">Today</a>
+            <a class="button light-blue" href="/{{ week_of|date_modify('monday this week')|date_modify('+1 week')|date('Y-m-d', 'Pacific/Auckland') }}">➡️ Week</a>
             <script>
             document.querySelector("select#week-selector").addEventListener("change", function(event) {
                 window.location.href = ("/?week-of=" + event.target.selectedOptions[0].value);
