Fix: Get weekly graph to use new URL scheme

--- a/addons/fitlytics/finnito/fitlytics-module/resources/views/pages/home.twig
+++ b/addons/fitlytics/finnito/fitlytics-module/resources/views/pages/home.twig
@@ -115,7 +115,7 @@
                         }
                     }
                 });
-                getRemoteData(currentWeekChart, '/api/currentWeekChart?week-of={{ week_of|date("Y-m-d", "Pacific/Auckland") }}');
+                getRemoteData(currentWeekChart, '/api/currentWeekChart/{{ week_of|date("Y-m-d", "Pacific/Auckland") }}');
             });
             </script>
         </div>
