--- a/public/css/style.css
+++ b/public/css/style.css
@@ -16,7 +16,7 @@ thead {
     background-color: rgba(60, 99, 130,1.0);
     display: block;
     color: white;
-    border-radius: 0.25rem;
+    /*border-radius: 0.25rem;*/
 }
 
 .table-wrapper {
@@ -123,6 +123,10 @@ footer {
     max-width: 100%;
     width: 100%;
     display: block;
+    border-radius: 0.25rem;
+    overflow: clip;
+    margin-bottom: 0.5rem;
+    background-color: #ecf0f1;
 }
 
 td > .flex-apart {
@@ -260,32 +264,32 @@ h3 {
     padding: 0.1rem 0.2rem;
     font-size: small;
     display: inline-block;
-    margin: 0.1rem 0;
+    margin: 0.1rem 0 0.25rem 0;
 }
 
 .tag.t1 {
-    background-color: rgba(46, 204, 113, 0.1);
-    color: rgba(46, 204, 113);
+    background-color: rgba(46, 204, 113);
+    color: white;
 }
 
 .tag.t2 {
-    background-color: rgba(52, 152, 219, 0.1);
-    color: rgba(52, 152, 219);
+    background-color: rgba(52, 152, 219);
+    color: white;
 }
 
 .tag.t3 {
-    background-color: rgba(241, 196, 15, 0.1);
-    color: rgba(241, 196, 15);
+    background-color: rgba(241, 196, 15);
+    color: black;
 }
 
 .tag.t4 {
-    background-color: rgba(230, 126, 34, 0.1);
-    color: rgba(230, 126, 34, 1);
+    background-color: rgba(230, 126, 34, 1);
+    color: black;
 }
 
 .tag.t5 {
-    background-color: rgba(231, 76, 60, 0.1);
-    color: rgba(231, 76, 60, 1);
+    background-color: rgba(231, 76, 60, 1);
+    color: black;
 }
 
 .button {
@@ -294,6 +298,16 @@ h3 {
     padding: 0.25rem 0.5rem;
     box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
     display: inline-block;
+    transition: box-shadow 200ms;
+}
+
+.button:hover {
+    box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
+}
+
+.button.small {
+    font-size: small;
+    padding: 0.1rem 0.25rem;
 }
 
 .button.green {
