Adds function to get HR and process into buckets

--- a/addons/fitlytics/finnito/fitlytics-theme/resources/views/layouts/default.twig
+++ b/addons/fitlytics/finnito/fitlytics-theme/resources/views/layouts/default.twig
@@ -67,6 +67,7 @@
 
 <header class="column-to-row">
     <div><h1>{{ setting_value('streams::name', config_get('streams::distribution.name')) }}</h1></div>
+    <a href="/settings">Settings</a>
     {% block week %}{% endblock %}
 </header>
 
