--- a/addons/fitlytics/finnito/fitlytics-module/resources/views/pages/hr_zones.twig
+++ b/addons/fitlytics/finnito/fitlytics-module/resources/views/pages/hr_zones.twig
@@ -9,7 +9,10 @@
 {% endblock %}
 
 {% block content %}
+
     <p>You may enter your Resting Heart Rate and Maximum Heart Rate and click <button id="calculate">Calculate</button> to get an automatic calculation.</p>
+
+    <p>In the last year your maximum heartrate was: {{ maxHR }}bpm.</p>
     
     <p><code>Target HR = [(Max HR - Resting HR) x %Intensity] + Resting HR</code></p>
     {# https://www.calculatorsoup.com/calculators/health/target-heart-rate-zone-calculator.php #}
